--- a/bloco_3/dia_1/style.css
+++ b/bloco_3/dia_1/style.css
@@ -28,6 +28,7 @@ body {
     line-height: 42px;
     font-weight: 600;
     font-size: 28px;
+    margin-bottom: 60px;
   }
 
   .testimonial_name {
@@ -68,6 +69,20 @@ body {
   }
 
   .header-text p {
+    margin-bottom: 30px;
+  }
+
+  .market {
+    padding: 70px 30px;
+    text-align: center;
+  }
+
+  .market-text {
+    max-width: 60%;
+    margin: auto;
+  }
+
+  .market-text p {
     margin-bottom: 30px;
   }
     
