--- a/exercises/introducao-a-html-e-css_4/style.css
+++ b/exercises/introducao-a-html-e-css_4/style.css
@@ -1,7 +1,7 @@
-.links {
-  display: inline-block;
+table, th, td{
+  border: 1px solid black;
+  width: 600px;
+  border-collapse: collapse;
 }
 
-.border {
-  border: 1px solid #000;
-}
+
